[gd_scene load_steps=43 format=2]

[ext_resource path="res://Graphics/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemy/Boss.gd" type="Script" id=3]
[ext_resource path="res://Hurtbox_Hitbox/HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy_Stats.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 1 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 1 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 1 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 1 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 1 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 2 )
region = Rect2( 0, 900, 300, 100 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 2 )
region = Rect2( 0, 1000, 300, 100 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 2 )
region = Rect2( 0, 1100, 300, 100 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 300, 100 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 2 )
region = Rect2( 0, 1300, 300, 100 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 2 )
region = Rect2( 0, 1400, 300, 100 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 2 )
region = Rect2( 0, 1300, 300, 100 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 0, 1400, 300, 100 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 0, 1000, 300, 100 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 0, 1100, 300, 100 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 300, 100 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 0, 1300, 300, 100 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 0, 1400, 300, 100 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 300, 100 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 300, 100 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 0, 300, 300, 100 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 300, 100 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 0, 500, 300, 100 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 0, 600, 300, 100 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 0, 700, 300, 100 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 0, 800, 300, 100 )

[sub_resource type="SpriteFrames" id=91]
animations = [ {
"frames": [ SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "charge_attack",
"speed": 8.0
}, {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ) ],
"loop": true,
"name": "laser_attack",
"speed": 15.0
}, {
"frames": [ SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ) ],
"loop": true,
"name": "laser_charge",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=92]
radius = 8.06226

[sub_resource type="CapsuleShape2D" id=122]
radius = 144.0
height = 196.0

[sub_resource type="CapsuleShape2D" id=94]
radius = 25.0
height = 10.0

[node name="Boss" type="KinematicBody2D"]
position = Vector2( 0, -12 )
scale = Vector2( 1.08, 1.08 )
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 91 )
animation = "idle"

[node name="Position2D" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 0.925926, -16.6667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 92 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
rotation = 1.5708
shape = SubResource( 122 )

[node name="HurtBox" parent="." instance=ExtResource( 6 )]
position = Vector2( -2, 0 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 2, 3 )
shape = SubResource( 94 )

[node name="Enemy_Stats" parent="." instance=ExtResource( 7 )]
max_health = 10

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Enemy_Stats" to="." method="_on_Enemy_Stats_no_health"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="HurtBox"]
